package ElProblemaDeParada.haltchecker.Reverser;
/**
 * Clase que contiene la lógica de la aplicación.
 * @autor Pedro Alonso Tapia Lobo
 */

public class ReverserLogic {
    public static boolean willHalt() {
        // Simulación: Supongamos que 'ElProblemaDeParada.haltchecker.Reverser' siempre se detiene
        return true;  // Puedes cambiar esta lógica según tus requisitos
    }
}
