package ElProblemaDeParada.haltchecker.Reverser;
/**
 * Clase que contiene el modelo de la aplicación.
 * @autor Pedro Alonso Tapia Lobo
 */

public class ReverserModel {

    public String simulateCountUp() {
        // Simulate counting up (this should loop forever)
        return "Counting up indefinitely...";
    }

    public String simulateCountDown() {
        // Simulate counting down (this will eventually stop)
        return "Counting down and will stop at zero...";
    }

    public String simulateReverser() {
        // Placeholder for ElProblemaDeParada.haltchecker.Reverser simulation logic
        return "Analyzing ElProblemaDeParada.haltchecker.Reverser behavior...";
    }
}
